k8s/cloud/ui-side-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-side-worker
  namespace: dongyu
  labels:
    app: ui-side-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-side-worker
  template:
    metadata:
      labels:
        app: ui-side-worker
    spec:
      terminationGracePeriodSeconds: 15
      containers:
      - name: worker
        image: dy-ui-side-worker:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 9101
---
apiVersion: v1
kind: Service
metadata:
  name: ui-side-worker
  namespace: dongyu
spec:
  selector:
    app: ui-side-worker
  ports:
  - port: 9101
    targetPort: 9101
